<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".timer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="auto">


            <EditText
                android:id="@+id/editTextTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:ems="10"
                android:hint="mm:ss"
                android:inputType="time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.699"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/adamina"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/adamina"
                android:text="@string/work"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime2"
                app:layout_constraintVertical_bias="0.138" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="43dp"
                android:layout_height="49dp"
                android:layout_marginTop="88dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/checkbox_on_background"
                app:layout_constraintEnd_toStartOf="@+id/mourya"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/setButton"
                style="@style/button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/btn"
                android:text="@string/set"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/mourya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:ems="10"
                android:hint="Task"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.646"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:layout_marginTop="92dp"
                android:background="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@+id/editTextTime2"
                app:layout_constraintHorizontal_bias="0.477"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>